--- a/filter.html
+++ b/filter.html
@@ -129,7 +129,7 @@
         <div id="genre-list" class="genre-wrapper"></div>
     </div>
 
-    <button class="filter-submit-btn" onclick="applyFilter()">Filter</button>
+    <button class="filter-submit-btn" >Filter</button>
     
 </div>
 
