--- a/anime.html
+++ b/anime.html
@@ -72,6 +72,21 @@
     </div>
   </aside>
   <div class="xe-sidebar-overlay" id="overlay"></div>
+         <!-- LOADER -->
+       <div id="page-loader">
+         <h1 class="site-title animate-text">
+           <span class="accent">XE</span>ANIME
+         </h1>
+         <span class="loader"></span>
+       </div>
+       
+       <!-- LOADER -->
+<div id="page-loader">
+  <h1 class="site-title animate-text">
+    <span class="accent">XE</span>ANIME
+  </h1>
+  <span class="loader"></span>
+</div>
   
 <div class="card-anime-section">
   <h3 class="section-title">
