--- a/info.html
+++ b/info.html
@@ -74,6 +74,14 @@
       </aside>
       <div class="xe-sidebar-overlay" id="overlay"></div>
       
+<!-- LOADER -->
+<div id="page-loader">
+  <h1 class="site-title animate-text">
+    <span class="accent">XE</span>ANIME
+  </h1>
+  <span class="loader"></span>
+</div>
+      
 <div id="app" >
     <!-- all your website content -->
 </div>
