--- a/watch.html
+++ b/watch.html
@@ -90,6 +90,13 @@
          </div>
       </aside>
       <div class="xe-sidebar-overlay" id="overlay"></div>
+      <!-- LOADER -->
+<div id="page-loader">
+  <h1 class="site-title animate-text">
+    <span class="accent">XE</span>ANIME
+  </h1>
+  <span class="loader"></span>
+</div>
       
       <div class="main-wrapper">
          <div class="containers-wrapper">
