--- a/home.html
+++ b/home.html
@@ -37,7 +37,8 @@
 <header class="navbar">
     <div class="nav-left">
         <i class="fas fa-bars menu-toggle menuToggle"></i>
-        <div class="logo">XE<span>ANIME</span></div>
+        <div class="logo">XE<span>ANIME</span>
+        </div>
     </div>
     <div class="search-container">
         <button onclick="window.location.href='/filter.html'" class="filter-btn"> <i class="fa-solid fa-filter"></i></button>
