--- a/watch.html
+++ b/watch.html
@@ -49,7 +49,7 @@
                <i class="fa fa-search searchIcon"></i>
                <i class="fa-solid fa-x searchIcon searchCloseIcon"></i>
             </div>
-            <button class="login-btn">Login</button>
+            <button href="login.html" class="login-btn">Login</button>
          </div>
         
          
